# CPP_projects

CPP1_matrixplus/: README.md
CPP1_matrixplus/src/: Makefile  my_matrix_oop.cpp  my_matrix_oop.h  tests.cpp
CPP2_s21_containers/: README.md
CPP2_s21_containers/src/: Makefile  s21_containers.h  s21_containersplus.h  test_main.cc
CPP2_s21_containers/src/array/: s21_array.h  s21_array.tpp  test_array.cc
CPP2_s21_containers/src/avl_tree/: s21_avl_tree.h  s21_avl_tree.tpp  test_tree.cc
CPP2_s21_containers/src/list/: s21_list.h  s21_list.tpp  test_list.cc
CPP2_s21_containers/src/map/: s21_map.h  s21_map.tpp  test_map.cc
CPP2_s21_containers/src/multiset/: s21_multiset.h  s21_multiset.tpp  test_multiset.cc
CPP2_s21_containers/src/queue/: s21_queue.h  s21_queue.tpp  test_queue.cc
CPP2_s21_containers/src/set/: s21_set.h  s21_set.tpp  test_set.cc
CPP2_s21_containers/src/stack/: s21_stack.h  s21_stack.tpp  test_stack.cc
CPP2_s21_containers/src/vector/: s21_vector.h  s21_vector.tpp  test_vector.cc
CPP3_SmartCalc_v2.0/: README.md
CPP3_SmartCalc_v2.0/src/: Controller.h  Makefile  SmartCalculator.cpp  SmartCalculator.h  doc.txt  test.cpp
CPP3_SmartCalc_v2.0/src/SmartCalc/: SmartCalc.pro  graphwindow.cpp  graphwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
CPP4_3DViewer_v2.0/: .gitlab-ci.yml  Doxyfile  README.md  tg_info.sh
CPP4_3DViewer_v2.0/debug/: debug.cc  debug.h  develop_program_and_install_lib.sh  todo.md
CPP4_3DViewer_v2.0/src/: CMakeLists.txt  Makefile  main.cc  s21_3dviewer_v2.h
CPP4_3DViewer_v2.0/src/controller/: controller.cc  controller.h
CPP4_3DViewer_v2.0/src/model/: facade.cc  facade.h  model.cc  model.h  obj3d.cc  obj3d.h  strategy.cc  strategy.h
CPP4_3DViewer_v2.0/src/view/: glwidget.cc  glwidget.h  mainwindow.cc  mainwindow.h  mainwindow.ui  settings.cc  style.cc  styleWindow.cc  transforamation.cc  transformationWindow.cc
CPP4_3DViewer_v2.0/tests/: 3dviewer_v2_tests.cc  controller_tests.cc  model_tests.cc  obj3d_tests.cc  s21_3dviewer_v2_tests.h  s21_privateMethods_tests.cc
KarnaughMap/: Makefile  README.md  project_task.cpp  project_task.h  tests.cpp
